# picobot

./: .gitignore  ARCHITECTURE.md  GUIDE.md  Makefile  README.md  TUTORIAL.md  TUTORIAL.txt  picobot-sandbox.Dockerfile  pyproject.toml  requirements-dev.txt  scripts  searxng  testdata
dev/: README.txt
dev/scripts/: generate_kb_story_pdf.py  make_test_pdf.py
docker/: README.txt  picobot-runtime-bootstrap.sh  picobot-sandbox-entrypoint.sh  picobot-sandbox.Dockerfile
docs/: FEATURE_FLOWS.md  REPO_RULES.txt  repo_structure.txt
infra/: README.txt
infra/searxng/: docker-compose.yml
outputs/podcasts/: podcast.concat.txt
picobot/: __init__.py  __main__.py  runtime_config.py  ui.py
picobot/agent/: application.py  memory.py  memory_context_service.py  models.py  orchestrator.py  prompts.py  route_selection.py  router.py  runtime_models.py  tool_executor.py  turn_processor.py  workflow_dispatcher.py
picobot/app/: bootstrap.py  main.py  telegram_monitor.py
picobot/bus/: events.py  queue.py
picobot/channels/: __init__.py  base.py  cli.py  manager.py  telegram.py
picobot/cli/: app.py
picobot/commands/: dispatcher.py
picobot/config/: config.template.json  init.py  loader.py  schema.py  (+1 more)
picobot/cron/: __init__.py  (+1 more)
scripts/: generate_kb_story_pdf.py  make_test_pdf.py  telegram_check.py
searxng/: .env  docker-compose.yml  settings.yml
tests/: conftest.py  test_audit_metadata.py  test_config.py  test_debug_router_dump.py  test_deterministic_default_kb.py  test_e2e_flow.py  test_ingest_and_search.py  test_init_tools.py  test_kb_query_routing_surface.py  test_kb_tools.py  test_memory_injection.py  test_memory_recall_general.py  test_news_summarizer_render.py  test_orchestrator_chat.py  test_podcast_routing_guardrails.py  test_podcast_trigger.py  test_prompts.py  test_provider_registry.py  test_registry.py  test_retrieval_guardrails.py  test_router.py  test_router_docs.py  test_router_smoke.py  test_session.py  test_structural_seams.py  test_stt_tts_sandbox.py  test_telegram_automations.py  test_telegram_channel_surface.py  test_telegram_mock.py  test_tool_validation.py  test_tools_execution.py  test_tools_routing.py  test_ui_commands.py  test_ui_news_command.py  test_web_search_tool.py  test_web_tool_unified.py
(+122 files in other folders)
