[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "picobot"
version = "0.1.0"
description = "picobot: a pico clone-subset of nanobot with Telegram + CLI, local Ollama, KB ingest/search, memory."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "picobot contributors" }]

dependencies = [
  "pydantic>=2.6",
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13.7",
  "prompt_toolkit>=3.0",
  "pypdf>=4.0",
  "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[project.scripts]
picobot = "picobot.__main__:app"

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
extend-exclude = [".picobot"]
line-length = 110
target-version = "py311"

[tool.setuptools.package-data]
picobot = ["config/*.json"]
