[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "picobot"
version = "0.1.0"
description = "Local-first modular assistant with retrieval, tools, CLI and Telegram"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "picobot contributors" }
]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "pypdf>=4.2,<6",
  "qdrant-client>=1.9,<2",
  "prompt-toolkit>=3.0.47,<4",
  "python-telegram-bot>=21,<22",
  "yt-dlp>=2025.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.6,<1"
]

[project.scripts]
picobot = "picobot.app.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["picobot*"]
exclude = ["outputs*"]

[tool.setuptools.package-data]
picobot = [
  "knowledge/routing_kb/routes/*.md",
  "config/*.json",
  "config/*.yml"
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".picobot"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
markers = [
  "asyncio: mark a test as asyncio."
]
